--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
                 <img src="./assets/brand/user-avtar2.png" alt="Profile" class="avatar me-3">
                 <div>
                   <h6 class="mb-0">Gabriel Valdivia</h6>
-                  <small class="text-muted">Principal Product Designer, Patreon</small>
+                  <small class="text-muted">Principal Product, Patreon</small>
                 </div>
               </div>
             </div>
